# NativeApp

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
